--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../ASSETS/allstars-test/html export/allstars-speedrun-window-fix/index.html"
+export_path="../../Game Development/ASSETS/leaderboard-jam/alpha/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
